added a background image and changed the styles of the project

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -202,12 +202,12 @@ svg {
 /* line 5, ../sass/global.sass */
 body {
   font-family: "Work Sans", sans-serif;
-  background: #fff;
+  background-image: url("./images/hypnotize.png");
 }
 
 /* line 13, ../sass/global.sass */
 .header {
-  background: #57496e;
+  background: #0d542e;
   padding: 20px 0;
   margin-bottom: 30px;
 }
@@ -255,7 +255,7 @@ body {
 
 /* line 44, ../sass/global.sass */
 .actions--bar {
-  border-bottom: 1px solid #d5f9fe;
+  border-bottom: 1px solid #0d542e;
   background: #f8feff;
   padding: 20px 0;
   margin-top: -30px;
@@ -282,7 +282,7 @@ h1 {
 
 /* line 61, ../sass/global.sass */
 a {
-  color: #7c689b;
+  color: #19864c;
   cursor: pointer;
   text-decoration: none;
   -webkit-transition: color 0.2s;
@@ -302,6 +302,7 @@ p {
 .bounds {
   max-width: 1250px;
   margin: 0 auto;
+  background-image: ;
 }
 
 /* line 74, ../sass/global.sass */
@@ -339,7 +340,7 @@ p {
 
 /* line 102, ../sass/global.sass */
 .course--module {
-  background: #7c689b;
+  background: #0d542e;
   border-radius: 8px;
   padding: 30px;
   margin-bottom: 30px;
@@ -347,7 +348,9 @@ p {
   display: block;
   position: relative;
   box-sizing: border-box;
+  border: solid 1px black
 }
+
 /* line 2, ../sass/mixins.sass */
 .course--module:before, .course--module:after {
   content: " ";
@@ -428,7 +431,7 @@ p {
 /* line 164, ../sass/global.sass */
 .course--header .course--label {
   font-size: 18px;
-  color: #999;
+  color: #636363;
 }
 /* line 167, ../sass/global.sass */
 .course--header .course--title {
@@ -439,7 +442,7 @@ p {
 /* line 171, ../sass/global.sass */
 .course--header p {
   font-size: 18px;
-  color: #b1a5c4;
+  color: #19864c;
   font-weight: 100;
 }
 /* line 176, ../sass/global.sass */
@@ -506,7 +509,7 @@ p {
   margin: 9px 0 0 -30px;
   width: 5px;
   height: 5px;
-  border: 1px solid #999;
+  border: 1px solid #6f6f6f;
   border-radius: 10px;
   display: block;
 }
@@ -535,18 +538,18 @@ p {
   font-size: 18px;
   font-weight: 100;
   margin: 0 0 10px;
-  color: #999;
+  color: #636363;
   display: block;
 }
 /* line 287, ../sass/global.sass */
 .course--stats--list h4 {
   font-family: "Cousine";
   font-weight: 100;
-  color: #999;
+  color: #636363;
   font-size: 14px;
   padding: 0 0 10px;
   margin-bottom: 10px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #a9a9a9;
   text-transform: uppercase;
   letter-spacing: 2px;
   text-overflow: ellipsis;
@@ -678,8 +681,9 @@ input:focus {
 
 /* line 507, ../sass/global.sass */
 .button {
-  background: #7c689b;
+  background: #0d542e;
   color: #fff;
+  cursor: pointer;
   font-family: "Work Sans", sans-serif;
   font-size: 18px;
   padding: 15px 30px;
@@ -701,14 +705,15 @@ input:focus {
 }
 /* line 522, ../sass/global.sass */
 .button:not(.button-secondary):hover {
-  background: #63537d;
+  background: #19864c;
 }
 
 /* line 525, ../sass/global.sass */
 .button-secondary {
-  color: #7c689b;
+  color: #0d542e;
   background: none;
-  box-shadow: 0 0 0 2px #7c689b inset;
+  cursor: pointer;
+  box-shadow: 0 0 0 2px #0d542e inset;
   -webkit-transition: box-shadow 0.2s, color 0.2s;
   -moz-transition: box-shadow 0.2s, color 0.2s;
   -ms-transition: box-shadow 0.2s, color 0.2s;
@@ -717,8 +722,8 @@ input:focus {
 }
 /* line 530, ../sass/global.sass */
 .button-secondary:hover {
-  color: #63537d;
-  box-shadow: 0 0 0 2px #63537d inset;
+  color: #19864c;
+  box-shadow: 0 0 0 2px #19864c inset;
 }
 
 /* adds additional padding to the bottom of an element */
